--- a/templates/index.html
+++ b/templates/index.html
@@ -67,21 +67,31 @@
 
         <div class="row py-5 mx-5 d-flex justify-content-between">
             <div class="col-md-6 ps-md-5">
-                <div class="whoarewe-imageborder ms-md-5">
+                <div class="whoarewe-imageborder">
                     <img class="whoarewe-image img-fluid" src="{% static 'images\lt5c9c75370b05d.jpg' %}">
                 </div>
             </div>
             <div class="col-md-6 d-flex flex-column">
                 <h2 class="services-title">Biz Kimiz?</h2>
-                <p class="services-paragraph">Ertuğrul Avukatlık, yılların verdiği deneyim ve hukuk alanındaki derin uzmanlığıyla müvekkillerine en üst düzeyde hizmet sunan bir hukuk bürosudur. Adalet, dürüstlük ve müvekkil memnuniyeti ilkelerine sıkı sıkıya bağlı kalarak, her davada titiz bir çalışma ve stratejik bir yaklaşım sergiliyoruz. Hem bireysel hem de kurumsal müvekkillerimizin hukuki ihtiyaçlarını karşılamak için geniş bir hizmet yelpazesi sunuyor, her vakayı kendine özgü dinamikleriyle ele alarak en uygun çözümleri üretiyoruz. Güvenilir, erişilebilir ve sonuç odaklı hukuki danışmanlık anlayışımızla, haklarınızın korunması için yanınızdayız.</p>
+                <p class="services-paragraph">Ertuğrul Avukatlık, <span class="services-span">yılların verdiği deneyim</span> ve hukuk alanındaki derin uzmanlığıyla müvekkillerine en üst düzeyde hizmet sunan bir hukuk bürosudur.
+                <span class="services-span">Adalet, dürüstlük ve müvekkil memnuniyeti</span> ilkelerine sıkı sıkıya bağlı kalarak, her davada titiz bir çalışma ve stratejik bir yaklaşım sergiliyoruz.
+                Hem bireysel hem de kurumsal müvekkillerimizin hukuki ihtiyaçlarını karşılamak için geniş bir hizmet yelpazesi sunuyor,
+                her vakayı kendine özgü dinamikleriyle ele alarak en uygun çözümleri üretiyoruz. <span class="services-span">Güvenilir, erişilebilir ve sonuç odaklı</span> hukuki danışmanlık anlayışımızla,
+                <span class="services-span">haklarınızın korunması</span> için yanınızdayız.</p>
             </div>
         </div>
 
         <div class="row py-5 mx-5 d-flex justify-content-between">
             <div class="col-md-6 d-flex flex-column">
                 <h2 class="services-title pt-5">Hizmetlerimiz</h2>
-                <p class="services-paragraph">Ertuğrul Avukatlık olarak, bireysel ve kurumsal müvekkillerimize geniş bir yelpazede hukuki danışmanlık ve avukatlık hizmetleri sunmaktayız. Her hukuki süreçte yanınızda olarak, haklarınızı en iyi şekilde korumak ve adaletin tecellisi için titizlikle çalışıyoruz. Uzmanlık alanlarımızda edindiğimiz tecrübe ve bilgi birikimimizle, size özel çözümler üretmeyi ilke edindik.</p>
-                <p class="services-paragraph">Müvekkil memnuniyetini ve güven ilişkisini her zaman ön planda tutarak, hukuki süreçlerinizi başından sonuna kadar titizlikle takip ediyoruz. Şeffaf iletişim anlayışımız sayesinde, her aşamada sizi bilgilendiriyor ve en doğru kararları birlikte alıyoruz. Hukukun karmaşık yapısını sizin için sadeleştirerek, anlaşılır ve erişilebilir bir danışmanlık deneyimi sunmayı hedefliyoruz. Çünkü bizim için başarı, sadece kazanılan davalar değil, aynı zamanda müvekkillerimizin huzuru ve haklarının en iyi şekilde korunmasıdır.</p>
+                <p class="services-paragraph">Ertuğrul Avukatlık olarak, bireysel ve kurumsal müvekkillerimize <span class="services-span">geniş bir yelpazede</span> hukuki danışmanlık ve avukatlık hizmetleri sunmaktayız.
+                Her hukuki süreçte yanınızda olarak, <span class="services-span">haklarınızı en iyi şekilde korumak</span> ve adaletin tecellisi için titizlikle çalışıyoruz.
+                Uzmanlık alanlarımızda edindiğimiz tecrübe ve bilgi birikimimizle, <span class="services-span">size özel çözümler</span> üretmeyi ilke edindik.</p>
+                
+                <p class="services-paragraph"><span class="services-span">Müvekkil memnuniyetini ve güven ilişkisini</span> her zaman ön planda tutarak, hukuki süreçlerinizi başından sonuna kadar titizlikle takip ediyoruz.
+                <span class="services-span">Şeffaf iletişim</span> anlayışımız sayesinde, her aşamada sizi bilgilendiriyor ve en doğru kararları birlikte alıyoruz.
+                Hukukun karmaşık yapısını sizin için sadeleştirerek, <span class="services-span">anlaşılır ve erişilebilir</span> bir danışmanlık deneyimi sunmayı hedefliyoruz.
+                Çünkü bizim için başarı, sadece kazanılan davalar değil, aynı zamanda <span class="services-span">müvekkillerimizin huzuru ve haklarının en iyi şekilde korunmasıdır.</span></p>
             </div>
 
             <div class="col-md-6 d-flex flex-row">
@@ -140,6 +150,141 @@
                             <p class="cardparagraph">İşçi ve işveren haklarının korunması, iş sözleşmeleri, tazminat davaları, işe iade, mobbing ve sosyal güvenlik uyuşmazlıklarında profesyonel hukuki destek sağlıyoruz. İş hukuku alanındaki güncel mevzuatı yakından takip ederek müvekkillerimize en doğru rehberliği sunuyoruz.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" id="whyus-container">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <i class="fa-solid fa-handshake whyus-icon mx-2"></i>
+                <span class="whyus-span">+15</span>
+                <p style="color: #fff; font-size: 30px;">Yıl Deneyim</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa-solid fa-thumbs-up whyus-icon mx-2"></i>
+                <span class="whyus-span">%95</span>
+                <p style="color: #fff; font-size: 30px;">Başarı Oranı</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa-solid fa-phone whyus-icon mx-2"></i>
+                <span class="whyus-span">7/24</span>
+                <p style="color: #fff; font-size: 30px;">Ulaşılabilirlik</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid my-5">
+        <div class="row d-flex justify-content-between">
+            <div class="col-md-6 ps-md-5">
+                <div class="whyus-imageborder ms-md-5">
+                    <img class="img-fluid whyus-image" src="{% static 'images\justice-law-concept-lawyer-working-courtroom-selective-focus_1936-364.jpg' %}" style="width: 600px;">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="d-flex justify-content-start align-items-start flex-column">
+                    <div class="d-flex flex-row whyus-item my-3 px-3 pt-3" id="whyus-item1">
+                        <i class="fa-solid fa-scale-balanced whyus-icon mt-2" style="font-size: 40px !important;"></i>
+                        <span class="whyus-span mx-3" style="font-size: 40px !important;">+500</span>
+                        <p style="color: #fff; font-size: 40px;">Kazanılan Dava</p>
+                    </div>
+                    <div class="d-flex flex-row whyus-item my-3 px-3 pt-3" id="whyus-item2">
+                        <i class="fa-solid fa-face-smile-beam whyus-icon mt-2" style="font-size: 40px !important;"></i>
+                        <span class="whyus-span mx-3" style="font-size: 40px !important;">+1000</span>
+                        <p style="font-size: 40px; color: #fff;">Mutlu Müvekkil</p>
+                    </div>
+                    <div class="d-flex flex-row whyus-item my-3 px-3 pt-3" id="whyus-item3">
+                        <i class="fa-solid fa-handshake whyus-icon mt-2" style="font-size: 40px !important;"></i>
+                        <span class="whyus-span mx-3" style="font-size: 40px !important;">%98</span>
+                        <p style="color: #fff; font-size: 40px;">Müvekkil Memnuniyeti</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container-fluid my-5">
+        <div class="d-flex flex-row justify-content-center">
+            <button class="workspaceprevious-button"><i class="fa-solid fa-angle-left" style="font-size: 20px; color: #fff;"></i></button>
+            <h2 class="text-center services-title mx-3">Çalışma Alanlarımız</h2>
+            <button class="workspacenext-button"><i class="fa-solid fa-angle-right" style="font-size: 20px; color: #fff;"></i></button>
+        </div>
+        <div class="row workspace-row d-flex justify-content-center my-5" id="workspacerow1">
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-suitcase workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Ticaret ve Şirketler Hukuku</h3>
+                </div>
+            </div> 
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-user-shield workspace-icon"></i>
+                    <h3 class="text-center workspace-title">İş ve Sosyal Güvenlik Hukuku</h3>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-people-group workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Aile Hukuku</h3>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-house workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Gayrimenkul ve İnşaat Hukuku</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="row workspace-row d-flex justify-content-center my-5 d-none" id="workspacerow2">
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-handcuffs workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Ceza Hukuku</h3>
+                </div>
+            </div> 
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-scale-balanced workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Miras Hukuku</h3>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-file-signature workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Borçlar ve Sözleşmeler Hukuku</h3>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-address-book workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Sigorta Hukuku</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="row workspace-row d-flex justify-content-center my-5 d-none" id="workspacerow3">
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-person-walking workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Tüketici Hukuku</h3>
+                </div>
+            </div> 
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-book workspace-icon"></i>
+                    <h3 class="text-center workspace-title">İdare Hukuku</h3>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-microchip workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Bilişim ve Teknoloji Hukuku</h3>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="workspace-item d-flex flex-column justify-content-center align-items-center">
+                    <i class="fa-solid fa-money-check-dollar workspace-icon"></i>
+                    <h3 class="text-center workspace-title">Bankacılık ve Finans Hukuku</h3>
                 </div>
             </div>
         </div>
