--- a/templates/index.html
+++ b/templates/index.html
@@ -290,6 +290,138 @@
         </div>
     </div>
 
+    <div class="container-fluid py-5">
+        <h2 class="text-center services-title">Ekibimiz</h2>
+        <p class="text-center services-paragraph">Alanında uzman avukat kadromuz, haklarınızı korumak için yanınızda.</p>
+        <div class="row d-flex justify-content-center align-items-center my-5">
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column">
+                <div class="person-item px-3"> 
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat1.webp' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Mehmet Kaya</h3>
+                        <p class="person-degree">Avukat</p>
+                        <p class="person-email">mehmetkaya79@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column">
+                <div class="person-item px-3">
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat2.avif' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Ayşe Demir</h3>
+                        <p class="person-degree">Arabulucu</p>
+                        <p class="person-email">aysedemir81@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column">
+                <div class="person-item px-3">
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat3.avif' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Ahmet Yılmaz</h3>
+                        <p class="person-degree">Avukat, Arabulucu</p>
+                        <p class="person-email">ahmetyilmaz47@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column">
+                <div class="person-item px-3">
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat4.avif' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Zeynep Aydın</h3>
+                        <p class="person-degree">Avukat</p>
+                        <p class="person-email">zeynepaydin79@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2 class="text-center services-title">Müvekkil Yorumları</h2>
+        <p class="text-center services-paragraph">Daha önce çalıştığımız müvekkillerimizin yorumları.</p>
+        <div class="row d-flex justify-content-center align-items-center my-5">
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="comment-item p-3">
+                    <div class="comment-header d-flex flex-row mb-3">
+                        <img class="commenter-picture mx-3" src="{% static 'images\picture2.jpg' %}">
+                        <p class="commenter-name d-flex align-items-end">Can Arslan</p>
+                    </div>
+                    <div class="comment-info">
+                        <p class="text-center comment-content">Boşanma sürecimde Ertuğrul Avukatlık'ın profesyonel desteğini aldım. Hem hukuki süreçleri çok iyi yönettiler hem de duygusal olarak zor bir dönemde yanımda oldular. Haklarımı sonuna kadar korudular, çok teşekkür ederim</p>
+                    </div>
+                    <div class="d-flex justify-content-end align-items-end">
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="comment-item p-3">
+                    <div class="comment-header d-flex flex-row mb-3">
+                        <img class="commenter-picture mx-3" src="{% static 'images\picture1.jpg' %}">
+                        <p class="commenter-name d-flex align-items-end">Elif Şahin</p>
+                    </div>
+                    <div class="comment-info">
+                        <p class="text-center comment-content">İş yerindeki haksız fesih davasında bana yardımcı oldular. Tüm süreç boyunca her adımdan haberdar oldum, şeffaf bir iletişim kurduk. Davayı kazandık ve tazminatımı aldım. Kesinlikle tavsiye ederim.</p>
+                    </div>
+                    <div class="d-flex justify-content-end align-items-end">
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="comment-item p-3">
+                    <div class="comment-header d-flex flex-row mb-3">
+                        <img class="commenter-picture mx-3" src="{% static 'images\picture3.jpeg' %}">
+                        <p class="commenter-name d-flex align-items-end">Burak Özdemir</p>
+                    </div>
+                    <div class="comment-info">
+                        <p class="text-center comment-content">Şirket kuruluşu ve ticari sözleşmeler konusunda danışmanlık aldım. Çok detaylı ve titiz çalışıyorlar. Karmaşık hukuki konuları bile anlaşılır şekilde açıkladılar. İşimin hukuki altyapısı artık çok sağlam, teşekkürler.</p>
+                    </div>
+                    <div class="d-flex justify-content-end align-items-end">
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="comment-item p-3">
+                    <div class="comment-header d-flex flex-row mb-3">
+                        <img class="commenter-picture mx-3" src="{% static 'images\picture5.jpg' %}">
+                        <p class="commenter-name d-flex align-items-end">Emre Çelik</p>
+                    </div>
+                    <div class="comment-info">
+                        <p class="text-center comment-content">Trafik kazası sonrası sigorta şirketiyle yaşadığım sorunlarda yardımcı oldular. Hak ettiğim tazminatı almamı sağladılar. Hızlı, etkili ve sonuç odaklı bir hizmet. Kesinlikle memnun kaldım.</p>
+                    </div>
+                    <div class="d-flex justify-content-end align-items-end">
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                        <i class="fa-solid fa-star" style="font-size: 20px; color: rgb(255, 187, 0);"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
