--- a/templates/index.html
+++ b/templates/index.html
@@ -489,7 +489,8 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5">
+    <div class="container-fluid my-5">
+        <h2 class="text-center services-title">Sıkça Sorulan Sorular</h2>
         <div class="row d-flex justify-content-between mx-5 my-5">
             <div class="col-md-6">
                 <button class="ffa-card d-flex justify-content-between flex-row py-2 px-3 my-5 active" id="ffa1">
@@ -526,6 +527,89 @@
             </div>
         </div>
     </div>
+
+    <div class="container-fluid my-5" id="contact-container">
+        <h2 class="text-center services-title">İletişim</h2>
+        <p class="text-center services-paragraph">Sorularınız ve hukuki ihtiyaçlarınız için bizimle iletişime geçebilirsiniz.</p>
+        <div class="row my-5">
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-phone contact-icon px-1"></i><p class="contact-paragraph"> +90 123 456 78 90 </p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-envelope contact-icon px-1"></i><p class="contact-paragraph">m.toker2009@gmail.com</p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-city contact-icon px-1"></i><p class="contact-paragraph"> Ankara, Yenimahalle</p>
+            </div>
+        </div>
+        <div class="row d-flex flex-row mx-4 justify-content-between">
+            <div class="col-md-6">
+                <div class="contact-form">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="İsim">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Soyisim">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Email">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Konu">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Mesaj">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="contact-button px-5 py-3">Gönder</button>
+                </div>
+            </div>
+
+            <div class="col-md-6 d-flex justify-content-end">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6227.586075120915!2d2.2865390227570868!3d48.85783250966159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1str!2str!4v1761420008023!5m2!1str!2str" width="800" height="450" class="contact-map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container-fluid py-5" id="footer-container">
+            <div class="row d-flex justify-content-center flex-row">
+                <div class="col-md-3 d-flex justify-content-center align-items-center flex-column text-center">
+                    <h1 class="footer-title">Ertuğrul Avukatlık</h1>
+                    <p class="footer-paragraph">Adaletin Güvencesi, Hakların Koruyucusu.</p>
+                </div>
+
+                <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
+                    <h3 class="footer-h3">Menü</h3>
+                    <a href="/" class="footer-link my-2">Anasayfa</a>
+                    <a href="#" class="footer-link my-2">Hakkımızda</a>
+                    <a href="#" class="footer-link my-2">Çalışma Alanlarımız</a>
+                    <a href="#" class="footer-link my-2">Makaleler</a>
+                    <a href="#" class="footer-link my-2">İletişim</a>
+                </div>
+
+                <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
+                    <h3 class="footer-h3">Çalışma Alanlarımız</h3>
+                    <a href="#" class="footer-link my-2">Ticaret Hukuku</a>
+                    <a href="#" class="footer-link my-2">İş Hukuku</a>
+                    <a href="#" class="footer-link my-2">Aile Hukuku</a>
+                    <a href="#" class="footer-link my-2">Gayrimenkul Hukuku</a>
+                    <a href="#" class="footer-link my-2">Ceza Hukuku</a>
+                </div>
+
+                <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
+                    <h3 class="footer-h3">Makaleler</h3>
+                    <a href="#" class="footer-link my-2">Ticaret Hukuku</a>
+                    <a href="#" class="footer-link my-2">İş Hukuku</a>
+                    <a href="#" class="footer-link my-2">Aile Hukuku</a>
+                    <a href="#" class="footer-link my-2">Gayrimenkul Hukuku</a>
+                    <a href="#" class="footer-link my-2">Ceza Hukuku</a>
+                </div>
+                <div class="row d-flex justify-content-center align-items-center flex-row mt-5">
+                    <div class="col-md-4 d-flex justify-content-center flex-row">
+                        <i class="fa-solid fa-phone footer-icon px-1"></i><p class="footer-contact"> +90 123 456 78 90 </p>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center flex-row">
+                        <i class="fa-solid fa-envelope footer-icon px-1"></i><p class="footer-contact"> m.toker2009@gmail.com</p>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center flex-row">
+                        <i class="fa-solid fa-city contact-icon px-1"></i><p class="footer-contact"> Ankara, Yenimahalle</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
